api/src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  @apply h-screen w-screen text-neutral-100 overflow-hidden;
}

#__next {
  @apply h-full w-full;
}


.three-dot::after {
  display: inline-block;
  animation: kf-three-dot steps(1,end) 1s infinite;
  content: '';
  width: 8px;
}

@keyframes kf-three-dot {
  0%   { content: ''; }
  25%  { content: '.'; }
  50%  { content: '..'; }
  75%  { content: '...'; }
  100% { content: ''; }
}

